Parser.output
Terminals which are not used

   BOGUS
   '^'


Grammar

    0 $accept: File $end

    1 File: ValidInput EoF
    2     | ValidInput END

    3 ValidInput: /* empty */
    4           | ValidInput Assignment
    5           | ValidInput GroupInput

    6 Assignment: Assignable '=' Symbol ';'
    7           | Assignable '=' IntExpr ';'
    8           | Assignable '=' DblExpr ';'
    9           | Assignable '=' String ';'
   10           | Assignable '=' Symbol IntExpr ';'

   11 @1: /* empty */

   12 GroupInput: UNDER Assignable '{' @1 ValidInput '}'

   13 Assignable: Symbol
   14           | Assignable '.' Symbol
   15           | Assignable '[' IntExpr ']'

   16 IntExpr: IntConstant
   17        | '(' IntExpr ')'
   18        | IntExpr '+' IntExpr
   19        | IntExpr '-' IntExpr
   20        | IntExpr '*' IntExpr
   21        | IntExpr '/' IntExpr

   22 DblExpr: DblConstant
   23        | '(' DblExpr ')'
   24        | DblExpr '+' DblExpr
   25        | DblExpr '+' IntExpr
   26        | IntExpr '+' DblExpr
   27        | DblExpr '-' DblExpr
   28        | DblExpr '-' IntExpr
   29        | IntExpr '-' DblExpr
   30        | DblExpr '*' DblExpr
   31        | IntExpr '*' DblExpr
   32        | DblExpr '*' IntExpr
   33        | DblExpr '/' DblExpr
   34        | IntExpr '/' DblExpr
   35        | DblExpr '/' IntExpr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 17 23
')' (41) 17 23
'*' (42) 20 30 31 32
'+' (43) 18 24 25 26
'-' (45) 19 27 28 29
'.' (46) 14
'/' (47) 21 33 34 35
';' (59) 6 7 8 9 10
'=' (61) 6 7 8 9 10
'[' (91) 15
']' (93) 15
'^' (94)
'{' (123) 12
'}' (125) 12
error (256)
UNDER (258) 12
EoF (259) 1
IntConstant (260) 16
DblConstant (261) 22
Symbol (262) 6 10 13 14
String (263) 9
END (264) 2
BOGUS (265)


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
File (26)
    on left: 1 2, on right: 0
ValidInput (27)
    on left: 3 4 5, on right: 1 2 4 5 12
Assignment (28)
    on left: 6 7 8 9 10, on right: 4
GroupInput (29)
    on left: 12, on right: 5
@1 (30)
    on left: 11, on right: 12
Assignable (31)
    on left: 13 14 15, on right: 6 7 8 9 10 12 14 15
IntExpr (32)
    on left: 16 17 18 19 20 21, on right: 7 10 15 17 18 19 20 21 25
    26 28 29 31 32 34 35
DblExpr (33)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35,
    on right: 8 23 24 25 26 27 28 29 30 31 32 33 34 35


state 0

    0 $accept: . File $end

    $default  reduce using rule 3 (ValidInput)

    File        go to state 1
    ValidInput  go to state 2


state 1

    0 $accept: File . $end

    $end  shift, and go to state 3


state 2

    1 File: ValidInput . EoF
    2     | ValidInput . END
    4 ValidInput: ValidInput . Assignment
    5           | ValidInput . GroupInput

    UNDER   shift, and go to state 4
    EoF     shift, and go to state 5
    Symbol  shift, and go to state 6
    END     shift, and go to state 7

    Assignment  go to state 8
    GroupInput  go to state 9
    Assignable  go to state 10


state 3

    0 $accept: File $end .

    $default  accept


state 4

   12 GroupInput: UNDER . Assignable '{' @1 ValidInput '}'

    Symbol  shift, and go to state 6

    Assignable  go to state 11


state 5

    1 File: ValidInput EoF .

    $default  reduce using rule 1 (File)


state 6

   13 Assignable: Symbol .

    $default  reduce using rule 13 (Assignable)


state 7

    2 File: ValidInput END .

    $default  reduce using rule 2 (File)


state 8

    4 ValidInput: ValidInput Assignment .

    $default  reduce using rule 4 (ValidInput)


state 9

    5 ValidInput: ValidInput GroupInput .

    $default  reduce using rule 5 (ValidInput)


state 10

    6 Assignment: Assignable . '=' Symbol ';'
    7           | Assignable . '=' IntExpr ';'
    8           | Assignable . '=' DblExpr ';'
    9           | Assignable . '=' String ';'
   10           | Assignable . '=' Symbol IntExpr ';'
   14 Assignable: Assignable . '.' Symbol
   15           | Assignable . '[' IntExpr ']'

    '='  shift, and go to state 12
    '.'  shift, and go to state 13
    '['  shift, and go to state 14


state 11

   12 GroupInput: UNDER Assignable . '{' @1 ValidInput '}'
   14 Assignable: Assignable . '.' Symbol
   15           | Assignable . '[' IntExpr ']'

    '{'  shift, and go to state 15
    '.'  shift, and go to state 13
    '['  shift, and go to state 14


state 12

    6 Assignment: Assignable '=' . Symbol ';'
    7           | Assignable '=' . IntExpr ';'
    8           | Assignable '=' . DblExpr ';'
    9           | Assignable '=' . String ';'
   10           | Assignable '=' . Symbol IntExpr ';'

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    Symbol       shift, and go to state 18
    String       shift, and go to state 19
    '('          shift, and go to state 20

    IntExpr  go to state 21
    DblExpr  go to state 22


state 13

   14 Assignable: Assignable '.' . Symbol

    Symbol  shift, and go to state 23


state 14

   15 Assignable: Assignable '[' . IntExpr ']'

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 24

    IntExpr  go to state 25


state 15

   12 GroupInput: UNDER Assignable '{' . @1 ValidInput '}'

    $default  reduce using rule 11 (@1)

    @1  go to state 26


state 16

   16 IntExpr: IntConstant .

    $default  reduce using rule 16 (IntExpr)


state 17

   22 DblExpr: DblConstant .

    $default  reduce using rule 22 (DblExpr)


state 18

    6 Assignment: Assignable '=' Symbol . ';'
   10           | Assignable '=' Symbol . IntExpr ';'

    IntConstant  shift, and go to state 16
    ';'          shift, and go to state 27
    '('          shift, and go to state 24

    IntExpr  go to state 28


state 19

    9 Assignment: Assignable '=' String . ';'

    ';'  shift, and go to state 29


state 20

   17 IntExpr: '(' . IntExpr ')'
   23 DblExpr: '(' . DblExpr ')'

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 30
    DblExpr  go to state 31


state 21

    7 Assignment: Assignable '=' IntExpr . ';'
   18 IntExpr: IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr
   26 DblExpr: IntExpr . '+' DblExpr
   29        | IntExpr . '-' DblExpr
   31        | IntExpr . '*' DblExpr
   34        | IntExpr . '/' DblExpr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ';'  shift, and go to state 36


state 22

    8 Assignment: Assignable '=' DblExpr . ';'
   24 DblExpr: DblExpr . '+' DblExpr
   25        | DblExpr . '+' IntExpr
   27        | DblExpr . '-' DblExpr
   28        | DblExpr . '-' IntExpr
   30        | DblExpr . '*' DblExpr
   32        | DblExpr . '*' IntExpr
   33        | DblExpr . '/' DblExpr
   35        | DblExpr . '/' IntExpr

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    ';'  shift, and go to state 41


state 23

   14 Assignable: Assignable '.' Symbol .

    $default  reduce using rule 14 (Assignable)


state 24

   17 IntExpr: '(' . IntExpr ')'

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 24

    IntExpr  go to state 42


state 25

   15 Assignable: Assignable '[' IntExpr . ']'
   18 IntExpr: IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr

    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46
    ']'  shift, and go to state 47


state 26

   12 GroupInput: UNDER Assignable '{' @1 . ValidInput '}'

    $default  reduce using rule 3 (ValidInput)

    ValidInput  go to state 48


state 27

    6 Assignment: Assignable '=' Symbol ';' .

    $default  reduce using rule 6 (Assignment)


state 28

   10 Assignment: Assignable '=' Symbol IntExpr . ';'
   18 IntExpr: IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr

    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46
    ';'  shift, and go to state 49


state 29

    9 Assignment: Assignable '=' String ';' .

    $default  reduce using rule 9 (Assignment)


state 30

   17 IntExpr: '(' IntExpr . ')'
   18        | IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr
   26 DblExpr: IntExpr . '+' DblExpr
   29        | IntExpr . '-' DblExpr
   31        | IntExpr . '*' DblExpr
   34        | IntExpr . '/' DblExpr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ')'  shift, and go to state 50


state 31

   23 DblExpr: '(' DblExpr . ')'
   24        | DblExpr . '+' DblExpr
   25        | DblExpr . '+' IntExpr
   27        | DblExpr . '-' DblExpr
   28        | DblExpr . '-' IntExpr
   30        | DblExpr . '*' DblExpr
   32        | DblExpr . '*' IntExpr
   33        | DblExpr . '/' DblExpr
   35        | DblExpr . '/' IntExpr

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    ')'  shift, and go to state 51


state 32

   18 IntExpr: IntExpr '+' . IntExpr
   26 DblExpr: IntExpr '+' . DblExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 52
    DblExpr  go to state 53


state 33

   19 IntExpr: IntExpr '-' . IntExpr
   29 DblExpr: IntExpr '-' . DblExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 54
    DblExpr  go to state 55


state 34

   20 IntExpr: IntExpr '*' . IntExpr
   31 DblExpr: IntExpr '*' . DblExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 56
    DblExpr  go to state 57


state 35

   21 IntExpr: IntExpr '/' . IntExpr
   34 DblExpr: IntExpr '/' . DblExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 58
    DblExpr  go to state 59


state 36

    7 Assignment: Assignable '=' IntExpr ';' .

    $default  reduce using rule 7 (Assignment)


state 37

   24 DblExpr: DblExpr '+' . DblExpr
   25        | DblExpr '+' . IntExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 60
    DblExpr  go to state 61


state 38

   27 DblExpr: DblExpr '-' . DblExpr
   28        | DblExpr '-' . IntExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 62
    DblExpr  go to state 63


state 39

   30 DblExpr: DblExpr '*' . DblExpr
   32        | DblExpr '*' . IntExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 64
    DblExpr  go to state 65


state 40

   33 DblExpr: DblExpr '/' . DblExpr
   35        | DblExpr '/' . IntExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 66
    DblExpr  go to state 67


state 41

    8 Assignment: Assignable '=' DblExpr ';' .

    $default  reduce using rule 8 (Assignment)


state 42

   17 IntExpr: '(' IntExpr . ')'
   18        | IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr

    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46
    ')'  shift, and go to state 50


state 43

   18 IntExpr: IntExpr '+' . IntExpr

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 24

    IntExpr  go to state 68


state 44

   19 IntExpr: IntExpr '-' . IntExpr

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 24

    IntExpr  go to state 69


state 45

   20 IntExpr: IntExpr '*' . IntExpr

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 24

    IntExpr  go to state 70


state 46

   21 IntExpr: IntExpr '/' . IntExpr

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 24

    IntExpr  go to state 71


state 47

   15 Assignable: Assignable '[' IntExpr ']' .

    $default  reduce using rule 15 (Assignable)


state 48

    4 ValidInput: ValidInput . Assignment
    5           | ValidInput . GroupInput
   12 GroupInput: UNDER Assignable '{' @1 ValidInput . '}'

    UNDER   shift, and go to state 4
    Symbol  shift, and go to state 6
    '}'     shift, and go to state 72

    Assignment  go to state 8
    GroupInput  go to state 9
    Assignable  go to state 10


state 49

   10 Assignment: Assignable '=' Symbol IntExpr ';' .

    $default  reduce using rule 10 (Assignment)


state 50

   17 IntExpr: '(' IntExpr ')' .

    $default  reduce using rule 17 (IntExpr)


state 51

   23 DblExpr: '(' DblExpr ')' .

    $default  reduce using rule 23 (DblExpr)


state 52

   18 IntExpr: IntExpr . '+' IntExpr
   18        | IntExpr '+' IntExpr .
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr
   26 DblExpr: IntExpr . '+' DblExpr
   29        | IntExpr . '-' DblExpr
   31        | IntExpr . '*' DblExpr
   34        | IntExpr . '/' DblExpr

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 18 (IntExpr)


state 53

   24 DblExpr: DblExpr . '+' DblExpr
   25        | DblExpr . '+' IntExpr
   26        | IntExpr '+' DblExpr .
   27        | DblExpr . '-' DblExpr
   28        | DblExpr . '-' IntExpr
   30        | DblExpr . '*' DblExpr
   32        | DblExpr . '*' IntExpr
   33        | DblExpr . '/' DblExpr
   35        | DblExpr . '/' IntExpr

    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 26 (DblExpr)


state 54

   18 IntExpr: IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   19        | IntExpr '-' IntExpr .
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr
   26 DblExpr: IntExpr . '+' DblExpr
   29        | IntExpr . '-' DblExpr
   31        | IntExpr . '*' DblExpr
   34        | IntExpr . '/' DblExpr

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 19 (IntExpr)


state 55

   24 DblExpr: DblExpr . '+' DblExpr
   25        | DblExpr . '+' IntExpr
   27        | DblExpr . '-' DblExpr
   28        | DblExpr . '-' IntExpr
   29        | IntExpr '-' DblExpr .
   30        | DblExpr . '*' DblExpr
   32        | DblExpr . '*' IntExpr
   33        | DblExpr . '/' DblExpr
   35        | DblExpr . '/' IntExpr

    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 29 (DblExpr)


state 56

   18 IntExpr: IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   20        | IntExpr '*' IntExpr .
   21        | IntExpr . '/' IntExpr
   26 DblExpr: IntExpr . '+' DblExpr
   29        | IntExpr . '-' DblExpr
   31        | IntExpr . '*' DblExpr
   34        | IntExpr . '/' DblExpr

    $default  reduce using rule 20 (IntExpr)


state 57

   24 DblExpr: DblExpr . '+' DblExpr
   25        | DblExpr . '+' IntExpr
   27        | DblExpr . '-' DblExpr
   28        | DblExpr . '-' IntExpr
   30        | DblExpr . '*' DblExpr
   31        | IntExpr '*' DblExpr .
   32        | DblExpr . '*' IntExpr
   33        | DblExpr . '/' DblExpr
   35        | DblExpr . '/' IntExpr

    $default  reduce using rule 31 (DblExpr)


state 58

   18 IntExpr: IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr
   21        | IntExpr '/' IntExpr .
   26 DblExpr: IntExpr . '+' DblExpr
   29        | IntExpr . '-' DblExpr
   31        | IntExpr . '*' DblExpr
   34        | IntExpr . '/' DblExpr

    $default  reduce using rule 21 (IntExpr)


state 59

   24 DblExpr: DblExpr . '+' DblExpr
   25        | DblExpr . '+' IntExpr
   27        | DblExpr . '-' DblExpr
   28        | DblExpr . '-' IntExpr
   30        | DblExpr . '*' DblExpr
   32        | DblExpr . '*' IntExpr
   33        | DblExpr . '/' DblExpr
   34        | IntExpr '/' DblExpr .
   35        | DblExpr . '/' IntExpr

    $default  reduce using rule 34 (DblExpr)


state 60

   18 IntExpr: IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr
   25 DblExpr: DblExpr '+' IntExpr .
   26        | IntExpr . '+' DblExpr
   29        | IntExpr . '-' DblExpr
   31        | IntExpr . '*' DblExpr
   34        | IntExpr . '/' DblExpr

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 25 (DblExpr)


state 61

   24 DblExpr: DblExpr . '+' DblExpr
   24        | DblExpr '+' DblExpr .
   25        | DblExpr . '+' IntExpr
   27        | DblExpr . '-' DblExpr
   28        | DblExpr . '-' IntExpr
   30        | DblExpr . '*' DblExpr
   32        | DblExpr . '*' IntExpr
   33        | DblExpr . '/' DblExpr
   35        | DblExpr . '/' IntExpr

    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 24 (DblExpr)


state 62

   18 IntExpr: IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr
   26 DblExpr: IntExpr . '+' DblExpr
   28        | DblExpr '-' IntExpr .
   29        | IntExpr . '-' DblExpr
   31        | IntExpr . '*' DblExpr
   34        | IntExpr . '/' DblExpr

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 28 (DblExpr)


state 63

   24 DblExpr: DblExpr . '+' DblExpr
   25        | DblExpr . '+' IntExpr
   27        | DblExpr . '-' DblExpr
   27        | DblExpr '-' DblExpr .
   28        | DblExpr . '-' IntExpr
   30        | DblExpr . '*' DblExpr
   32        | DblExpr . '*' IntExpr
   33        | DblExpr . '/' DblExpr
   35        | DblExpr . '/' IntExpr

    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 27 (DblExpr)


state 64

   18 IntExpr: IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr
   26 DblExpr: IntExpr . '+' DblExpr
   29        | IntExpr . '-' DblExpr
   31        | IntExpr . '*' DblExpr
   32        | DblExpr '*' IntExpr .
   34        | IntExpr . '/' DblExpr

    $default  reduce using rule 32 (DblExpr)


state 65

   24 DblExpr: DblExpr . '+' DblExpr
   25        | DblExpr . '+' IntExpr
   27        | DblExpr . '-' DblExpr
   28        | DblExpr . '-' IntExpr
   30        | DblExpr . '*' DblExpr
   30        | DblExpr '*' DblExpr .
   32        | DblExpr . '*' IntExpr
   33        | DblExpr . '/' DblExpr
   35        | DblExpr . '/' IntExpr

    $default  reduce using rule 30 (DblExpr)


state 66

   18 IntExpr: IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr
   26 DblExpr: IntExpr . '+' DblExpr
   29        | IntExpr . '-' DblExpr
   31        | IntExpr . '*' DblExpr
   34        | IntExpr . '/' DblExpr
   35        | DblExpr '/' IntExpr .

    $default  reduce using rule 35 (DblExpr)


state 67

   24 DblExpr: DblExpr . '+' DblExpr
   25        | DblExpr . '+' IntExpr
   27        | DblExpr . '-' DblExpr
   28        | DblExpr . '-' IntExpr
   30        | DblExpr . '*' DblExpr
   32        | DblExpr . '*' IntExpr
   33        | DblExpr . '/' DblExpr
   33        | DblExpr '/' DblExpr .
   35        | DblExpr . '/' IntExpr

    $default  reduce using rule 33 (DblExpr)


state 68

   18 IntExpr: IntExpr . '+' IntExpr
   18        | IntExpr '+' IntExpr .
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr

    '*'  shift, and go to state 45
    '/'  shift, and go to state 46

    $default  reduce using rule 18 (IntExpr)


state 69

   18 IntExpr: IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   19        | IntExpr '-' IntExpr .
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr

    '*'  shift, and go to state 45
    '/'  shift, and go to state 46

    $default  reduce using rule 19 (IntExpr)


state 70

   18 IntExpr: IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   20        | IntExpr '*' IntExpr .
   21        | IntExpr . '/' IntExpr

    $default  reduce using rule 20 (IntExpr)


state 71

   18 IntExpr: IntExpr . '+' IntExpr
   19        | IntExpr . '-' IntExpr
   20        | IntExpr . '*' IntExpr
   21        | IntExpr . '/' IntExpr
   21        | IntExpr '/' IntExpr .

    $default  reduce using rule 21 (IntExpr)


state 72

   12 GroupInput: UNDER Assignable '{' @1 ValidInput '}' .

    $default  reduce using rule 12 (GroupInput)
